# command_interaction

./: .gitignore  README.md  docker_log.txt  install.sh  log_file.txt  screen_log_1.txt  t0_log.txt  t1_log.txt  useful_commands  useful_commands.save
Bot/: bot_log.txt  callbacks.py  command_list.json  commands.json  commands_dict.py  count_commands.py  create_dataset.py  create_full_dataset.py  create_intent_dataset.py  extract_additional_info.py  fix_dataset.py  global_utils.py  log.txt  main.py  make_dataset_csv.py  send_privacy_message.py  step_to_do.txt  strings.py  utils.py
Bot/MIVIA_IRI/: MTL_log.txt  callbacks.py  intents.json  intents_dict.py  log_file.txt  start_bot.py  t2_log.txt
Bot/info/: block_users_170.txt  commands.csv  effective_users_101.txt
Bot/utils/: commands_dict.py  count_commands.py  create_dataset.py  fix_dataset.py  gdrive_download.py
Model_Augmentation/: Dockerfile  all_commands.py  average_results.py  commands.py  db_test.csv  global_utils.py  inference.py  matchboxnet.py  matchboxnet_test.py  matchboxnet_test2.py  metrics.py  model.py  plot_distributions.py  plot_tf_event.py  preprocessing.py  test_data_distribution.json  test_with_thresh  utils.py
Model_Augmentation/dataset/: build_reject_tsv.py  commands_dict.py  include_common_voice.py  include_google_speech.py  include_google_speech_cmd.py  include_synthetics.py  mp3_to_wav.py  select_syn_samples.py  sync.ffs_db
Model_Augmentation/manifests/: matchboxnet_3x2x64.yaml  matchboxnet_3x2x64_0005.yaml  matchboxnet_3x2x64_001.yaml  matchboxnet_3x2x64_003.yaml  matchboxnet_3x2x64_01.yaml  matchboxnet_3x2x64_FELICE.yaml  matchboxnet_3x2x64_full.yaml  matchboxnet_3x2x64_geodesic_exp.yaml  matchboxnet_3x2x64_spec.yaml  noise_train_ita_manifest.csv  (+15 more)
ROS/: git_key.txt
ROS/hri_ws/src/iri_object_transportation_msgs/iri_object_transportation_msgs-sfm_plugin/: CMakeLists.txt  README.md
ROS/hri_ws/src/iri_object_transportation_msgs/iri_object_transportation_msgs-sfm_plugin/msg/: explicit_information.msg  localForcesCoefficients.msg  localForcesSFM.msg  narrowPathMarkersArray.msg  twistStamped.msg  twistStampedArray.msg  wrenchStampedArray.msg  wrenchStampedWithCoeff.msg  wrenchWithCoeffArray.msg
ROS/speech_ws/src/firos/: .textlintrc  .travis.yml  CMakeLists.txt  mkdocs.yml
ROS/speech_ws/src/firos/config/: topics.json  whitelist.json
ROS/speech_ws/src/firos/config_demo/: topics.json
ROS/speech_ws/src/firos/config_original/: original_config.json  original_topics.json  original_whitelist.json
ROS/speech_ws/src/firos/doc/: deprecated.md  index.md
ROS/speech_ws/src/firos/doc/install/: configuration-files.md  standards.md
ROS/speech_ws/src/firos/docker/: Dockerfile
ROS/speech_ws/src/firos/docker/docker-config/: config.json
ROS/speech_ws/src/firos/firos/include/: confManager.py  constants.py  test_Constants.py
ROS/speech_ws/src/firos/firos/include/pubsub/: __init__.py
ROS/speech_ws/src/firos/firos/include/pubsub/contextbroker/: cbPublisher.py  cbSubscriber.py
ROS/speech_ws/src/firos/firos/include/ros/: topicHandler.py
ROS/speech_ws/src/firos/firos/include/server/: firosServer.py
ROS/speech_ws/src/firos/launch/: firos.launch
ROS/speech_ws/src/firos/msgs/hri_msgs/: Speech.msg
ROS/speech_ws/src/firos/test_data/testConfigFiles/maximal/: config.json
ROS/speech_ws/src/firos/test_data/testConfigFiles/missNodeName/: config.json
ROS/speech_ws/src/firos/test_data/testConfigFiles/missPubFrequency/: config.json
ROS/speech_ws/src/firos/test_data/testConfigFiles/missServerPort/: config.json
TTS/: .gitignore  amazonpolly.py  check_dataset.py  commands_v2.py  convert.py  count.ps1  count.py  count_real.py  count_synth.py  db_dataset_real.csv  google_key.json  list_voices.py  myazure.py  mygoogle.py  myibm.py  mynemo.py  play_audio.py  rename.py  utils.py  vocalware.py
docker_folder/: Dockerfile  docker_log.txt  qi_install.sh
docker_nvidia/: Dockerfile  pal_docker.sh
docker_pc/: Dockerfile
fake_docker/: Dockerfile  docker_log.txt
new_docker_folder/: Dockerfile  docker_log.txt  log.txt
optimize_models/: onnx_to_trt.py  torch_quantization.py  torch_to_onnx.py  tutorials.txt
training/: .lr_find_3064345b-a619-4d8f-9f10-c0de66a36d22.ckpt  .lr_find_4991fb32-f538-463b-9b8c-4043b6bbc318.ckpt  .lr_find_d338cf57-b185-45c8-a0f2-3747b35936bf.ckpt  MSI_exp0_ENG_log.txt  MSI_exp0_ITA_log.txt  MSI_exp0_log.txt  MSI_exp0_t1_log.txt  MTL_log.txt  README.md  README_felice.md  README_md  README_msi.md  README_mtl.md  SCR__t1_log.txt  dgx1  hits.txt  log.txt  screen_log.txt  screen_log_1.txt  srid.py  t0_log.txt  t1_log.txt  t2_log.txt  t3_log.txt  test.py  test_FELICE.py  test_SCR_SR.py  train.py  train0_log.txt  train1_log.txt  train2_log.txt  train3_log.txt  train_SCR_log.txt  train_SCR_t0_log.txt  train_SCR_t1_log.txt  train_SCR_t2_log.txt  train_SCR_t3_log.txt
(+4487 files in other folders)
